# blender-gen-dataset

./: .gitignore  FAQ.md  PLUGINS.md  README.md  assemble-dataset.py  config.default.toml  config.toml  generate-batch.py  generate-batches.ps1  generate-batches.sh  generate-dataset.py  sample.toml
compat/to_colmap/: pyproject.toml  to_colmap.py
compat/to_idr_dataset/: README.md  pyproject.toml
compat/to_nsvf_dataset/: README.md
plugins/: __init__.py  bounding_box.py  camera_extrinsics.py  camera_intrinsics.py  camera_projection_matrix.py  depth.py  mask.py  masked.py  normal.py  normalization_matrix.py
scripts/checkerboard/: README.md  checkerboard.py
scripts/grid/: README.md  grid.py  pyproject.toml
scripts/to_colmap/: README.md  pyproject.toml  to_colmap.py
scripts/to_idr_dataset/: to_idr_dataset.py
scripts/to_nsvf_dataset/: pyproject.toml  to_nsvf_dataset.py  to_nsvf_tanks_and_temples_dataset.py
scripts/uniform_hemisphere_points/: README.md  pyproject.toml  uniform_hemisphere_points.py
