[project]
name = "grid"
version = "0.1.0"
description = "Generate grid of images"
authors = [
    {name = "SherAndrei",email = "welldryus@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
